GERONIMO-4415 use jpa for data access in monitoring console
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@720024 13f79535-47bb-0310-9956-ffa450edef68